Coordinate struct added

--- a/pololu-seek-and-avoid.vcxproj
+++ b/pololu-seek-and-avoid.vcxproj
@@ -115,7 +115,11 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Coordinate.h" />
     <ClInclude Include="__vm\.pololu-seek-and-avoid.vsarduino.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Coordinate.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
