--- a/pololu-seek-and-avoid.vcxproj.filters
+++ b/pololu-seek-and-avoid.vcxproj.filters
@@ -24,5 +24,13 @@
     <ClInclude Include="__vm\.pololu-seek-and-avoid.vsarduino.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Coordinate.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Coordinate.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
