--- a/pololu-seek-and-avoid.vcxproj
+++ b/pololu-seek-and-avoid.vcxproj
@@ -115,10 +115,12 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Clock.h" />
     <ClInclude Include="Coordinate.h" />
     <ClInclude Include="__vm\.pololu-seek-and-avoid.vsarduino.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Clock.cpp" />
     <ClCompile Include="Coordinate.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
