--- a/pololu-seek-and-avoid.vcxproj
+++ b/pololu-seek-and-avoid.vcxproj
@@ -115,13 +115,13 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Clock.h" />
     <ClInclude Include="Coordinate.h" />
+    <ClInclude Include="Timer.h" />
     <ClInclude Include="__vm\.pololu-seek-and-avoid.vsarduino.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Clock.cpp" />
     <ClCompile Include="Coordinate.cpp" />
+    <ClCompile Include="Timer.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
